# ChangeLog for dev-ml/gsl-ocaml
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  dev-ml/gsl-ocaml: Add bitbucket to remote-id in metadata.xml

*gsl-ocaml-1.10.2 (11 Aug 2012)

  11 Aug 2012; Guillaume Horel <guillaume.horel@gmail.com>
  +gsl-ocaml-1.10.2.ebuild, +metadata.xml:
  new package from #390583