@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Jun 2015; Justin Lecher <jlec@gentoo.org> gsl-ocaml-1.10.2.ebuild:
+  dev-ml/gsl-ocaml: Bump EAPI=5
+
   07 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
   dev-ml/gsl-ocaml: Add bitbucket to remote-id in metadata.xml
 
